--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "sn-api",
     "version": "1.0.0",
     "description": "",
-    "main": "./build/server.js",
+    "main": "./dist/server.js",
     "scripts": {
-        "start": "node ./build/server.js",
+        "start": "node ./dist/server.js",
         "build": "npx tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -19,7 +19,7 @@
         "jsonwebtoken": "^9.0.0",
         "jwt-decode": "^3.1.2",
         "morgan": "^1.10.0",
-        "sn-core": "file:../sn-core",
+        "sn-core": "git+https://github.com/jp34/sn-core.git",
         "winston": "^3.8.2"
     },
     "devDependencies": {
