--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "api": "^5.0.4",
+        "axios": "^1.3.6",
         "bcrypt": "^5.1.0",
         "body-parser": "^1.20.1",
         "dotenv": "^16.0.3",
@@ -19,7 +20,6 @@
         "jsonwebtoken": "^9.0.0",
         "jwt-decode": "^3.1.2",
         "morgan": "^1.10.0",
-        "sn-core": "git+https://github.com/jp34/sn-core.git",
         "winston": "^3.8.2"
     },
     "devDependencies": {
