--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node ./dist/server.js",
         "build": "npx tsc",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "clean": "rm -r ./dist",
+        "test": "npx mocha './dist/test/test.js'"
     },
     "author": "Joe Kadlic",
     "license": "ISC",
@@ -27,10 +28,16 @@
         "@types/express": "^4.17.14",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/jwt-decode": "^3.1.0",
+        "@types/mocha": "^10.0.1",
         "@types/mongoose": "^5.11.97",
         "@types/morgan": "^1.9.4",
         "@types/node": "^18.11.9",
+        "@types/should": "^13.0.0",
         "@types/winston": "^2.4.4",
+        "chai": "^4.3.7",
+        "chai-http": "^4.4.0",
+        "mocha": "^10.2.0",
+        "should": "^13.2.3",
         "typescript": "^4.9.3"
     }
 }
