--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "node ./dist/server.js",
         "build": "npx tsc",
         "clean": "rm -r ./dist",
-        "test": "npx mocha './dist/test/test.js'"
+        "test": "npx mocha './dist/test/*'"
     },
     "author": "Joe Kadlic",
     "license": "ISC",
@@ -27,13 +27,10 @@
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.14",
         "@types/jsonwebtoken": "^9.0.1",
-        "@types/jwt-decode": "^3.1.0",
         "@types/mocha": "^10.0.1",
         "@types/mongoose": "^5.11.97",
         "@types/morgan": "^1.9.4",
         "@types/node": "^18.11.9",
-        "@types/should": "^13.0.0",
-        "@types/winston": "^2.4.4",
         "chai": "^4.3.7",
         "chai-http": "^4.4.0",
         "mocha": "^10.2.0",
