--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/node": "^18.11.9",
         "chai": "^4.3.7",
         "chai-http": "^4.4.0",
+        "csv": "^6.3.1",
         "mocha": "^10.2.0",
         "should": "^13.2.3",
         "typescript": "^4.9.3"
