--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "sn-api",
     "version": "1.0.0",
     "description": "",
-    "main": "./lib/server.js",
+    "main": "./lib/src/server.js",
     "scripts": {
-        "start": "node ./lib/server.js",
+        "start": "node ./lib/src/server.js",
         "build": "npx tsc --build",
         "clean": "rm -r ./lib",
         "test": "npx mocha './lib/test/*'"
